fix: Homepage horizontal scroll, main text

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,10 @@
   justify-content: flex-end;
 
   background: rgb(255, 255, 255);
+
+  main{
+    overflow-x: hidden;
+  }
 }
 
 
