--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -10,6 +10,12 @@
       font-size: 64px;
       line-height: 80px;
       margin-bottom: 24px;
+      h1{
+        
+        span{
+          display: block;
+        }
+      }
       .online {
         color: #637381;
         margin-left: 10px;
